# futabario-bot

./: .env.prod  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
